--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,25 @@ body {
     background-color: #ADAAAA;
     cursor: not-allowed;
 }
+.tooltip {
+    position: absolute;
+    top: 70px;
+    font-size: 12px;
+    width: 30vw;
+    color: black;
+    background-color: #ADAAAA;
+    border: 2px solid black;
+    padding: 5px;
+    border-radius: 5px;
+    z-index: 10;
+}
+.name {
+    margin: 0;
+}
+.party {
+    margin: 0;
+    margin-top: 5px;
+}
 
 /***************
 **    FORM    **
@@ -134,5 +153,8 @@ body {
     }
     .res-save {
         width: 350px;
+    }
+    .tooltip {
+        /* width: ; */
     }
 }
